# matilda-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  SETUP_AND_TESTING.md  __init__.py  build_package.sh  config.yaml  config_demo.yaml  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  tests.yml
matilda_cli/: __init__.py  __main__.py  __version__.py
matilda_cli/algorithms/: __init__.py  base_algorithm.py  matilda.py
matilda_cli/algorithms/MATILDA/: __init__.py  candidate_rule_chains.py  constraint_graph.py  tgd_discovery.py
matilda_cli/database/: __init__.py  alchemy_utility.py  data_exporter.py  database_connection_manager.py  download_databases.py  index_manager.py  query_utility.py  triple_converter.py
matilda_cli/utils/: __init__.py  config_loader.py  log_setup.py  logging_utils.py  monitor.py  rules.py  run_cmd.py
tests/algorithms/: __init__.py  test_matilda_candidate_rule_chains.py  test_matilda_constraint_graphs.py  test_matilda_main.py  test_matilda_tgd_discovery.py
tests/benchmarks/: __init__.py  test_performance.py
tests/database/: __init__.py  test_alchemy_utility.py
tests/fixtures/: __init__.py  test_databases.py
tests/integration/: __init__.py  test_matilda_integration.py
tests/scripts/: create_db_with_violations.py  demo_matilda.py  inspect_university_db.py  verify_demo_setup.sh
