[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matilda-cli"
version = "0.1.0"
description = "MATILDA - TGD Rule Discovery Algorithm CLI"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [
    {name = "François Amat", email = "contact@famat.me"}
]
keywords = [
    "tuple-generating-dependencies",
    "tgd",
    "database",
    "rule-mining",
    "data-quality",
    "knowledge-discovery",
    "relational-databases",
    "schema-analysis",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]

dependencies = [
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "mysql-connector-python>=8.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.7.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.scripts]
matilda = "matilda_cli.__main__:main"
matilda_cli = "matilda_cli.__main__:main"

[project.urls]
Documentation = "https://matilda-cli.readthedocs.io"
Source = "https://github.com/Fran-cois/MATILDA"
Tracker = "https://github.com/Fran-cois/MATILDA/issues"
Zenodo = "https://doi.org/10.5281/zenodo.17644035"

[tool.setuptools]
packages = ["matilda_cli", "matilda_cli.algorithms", "matilda_cli.database", "matilda_cli.utils", "matilda_cli.algorithms.MATILDA"]

[tool.setuptools.package-data]
matilda_cli = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by Black)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["matilda_cli"]
known-third-party = [
    "tqdm",
    "requests",
    "beautifulsoup4",
    "psutil",
    "sqlalchemy",
    "pyyaml",
    "pandas",
    "numpy",
    "rich",
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["matilda_cli"]
known-third-party = [
    "tqdm",
    "requests",
    "beautifulsoup4",
    "psutil",
    "sqlalchemy",
    "pyyaml",
    "pandas",
    "numpy",
    "rich",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "(.venv|venv|build|dist|\\.eggs|.*\\.egg-info|__pycache__|.pytest_cache|.tox)",
]

[tool.coverage.run]
source = ["matilda_cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstractproperty",
    "^\\s*@property",
    "pass",
]

